<resources>
    <string name="app_name">AndroidTask</string>
    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_user">Add User</string>
    <string name="submit">Submit</string>
    <string name="user_list">Users List</string>
    <string name="no_users_added">No Users Added yet</string>
    <string name="fill_fields">Fill all fields first</string>

</resources>
